fix: Buttons now center text on overflow

--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -16,6 +16,7 @@
     outline: $outline 1.5px solid;
     justify-content: center;
     align-items: center;
+    text-align: center;
 
     i {
         display: flex;
